# SpotifyPico

./: Cargo.toml  README.md
Spotify-Pico/: .gitignore  Cargo.toml
Spotify-Pico/src/: lib.rs  main.rs
pico/: Cargo.toml
pico/.cargo/: config.toml
pico/src/: main.rs  mod.rs  spotify_pico.rs
server/: Cargo.toml
src/: lib.rs  main.rs
src/api_fetcher/: mod.rs  server.rs  spotify_auth.rs  spotify_fetch.rs
