[package]
name = "spotify_pico"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
rand = "0.10.1"
sha2 = "0.11.0"
base64 = "0.22.1"
axum = "0.8.9"
open = "5.3.5"
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
