[package]
name = "pico"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { path = "C:/Users/darkp/embassy/embassy-executor", features = [...] }
embassy-rp = { path = "C:/Users/darkp/embassy/embassy-rp", features = [...] }
embassy-net = { path = "C:/Users/darkp/embassy/embassy-net", features = [...] }
embassy-time = { path = "C:/Users/darkp/embassy/embassy-time", features = [...] }
cyw43 = { path = "C:/Users/darkp/embassy/cyw43", features = [...] }
cyw43-pio = { path = "C:/Users/darkp/embassy/cyw43-pio", features = [...] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = true
opt-level = "z"
lto = true
