[package]
name = "pico"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { path = "C:/Users/darkp/embassy/embassy-executor", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { path = "C:/Users/darkp/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { path = "C:/Users/darkp/embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { path = "C:/Users/darkp/embassy/embassy-net", features = ["defmt", "tcp", "udp", "dhcpv4", "dns"] }
cyw43 = { path = "C:/Users/darkp/embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "C:/Users/darkp/embassy/cyw43-pio", features = ["defmt"] }
defmt = { path = "C:/Users/darkp/embassy/defmt" }
defmt-rtt = { path = "C:/Users/darkp/embassy/defmt-rtt" }
panic-probe = { path = "C:/Users/darkp/embassy/panic-probe", features = ["print-defmt"] }
reqwless = { git = "https://github.com/drogue-iot/reqwless", rev = "68f703dfc16e6f7f964b7238c922c0d433118872", features = ["defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
heapless = "0.9"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = true
opt-level = "z"
lto = true
